# gerbv-gtk3

./: CONTRIBUTORS  Makefile.am  configure.ac
libgerbv/: Makefile.am  draw.c  draw.h  drill.c  drill_stats.h  export-rs274x.c  exportimage.c  gerber.c  gerbv.c  gerbv.h  pick-and-place.c
libgerbv-gdk/: Makefile.am  draw-gdk.c  draw-gdk.h  gerbv-gdk.c  gerbv-gdk.h  libgerbv-gdk.pc.in
src/: Makefile.am  attribute.c  callbacks.c  callbacks.h  gimpruler.c  gimpruler.h  interface.c  interface.h  main.c  main.h  modify-orientation-dialog.ui  project.c  render.c  run_gerbv.in
